# src/main/java/reqhandler/UserRequestHandler.java
@@ -5,11 +5,17 @@ import dao.OperationLogDao;
 import dao.UserDao;
 import model.OperationLog;
 import model.User;
+import net.sf.json.JSONObject;
+import org.apache.commons.lang.RandomStringUtils;
 import org.apache.log4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import redis.clients.jedis.Jedis;
+import util.HttpsUtil;
 import util.RedisUtil;
+
+import java.util.HashMap;
 
 import static constant.Status.*;
 
@@ -18,6 +24,15 @@ import static constant.Status.*;
 public class UserRequestHandler extends RequestHandler {
 
     private static Logger logger = Logger.getLogger(UserRequestHandler.class);
+
+    /*发送验证用的 key*/
+    @Value("${core.api.verification_code_key}")
+    private String apiKey;
+
+    /*验证码超时时间*/
+    @Value("${core.api.verification_code_timeout}")
+    private int verificationCodeTimeout;
+
     @Autowired
     private UserDao userDao;
 
@@ -26,6 +41,82 @@ public class UserRequestHandler extends RequestHandler {
 
     @Autowired
     private OperationLogDao operationLogDao;
+
+    public void add() {
+        String tel = this.postData.has("phoneNum") ? this.postData.getString("phoneNum").trim() : null;
+        String passwd = this.postData.has("password") ? this.postData.getString("password").trim() : "";
+        String email = this.postData.has("email") ? this.postData.getString("email").trim() : "";
+        String userName = this.postData.has("userName") ? this.postData.getString("userName").trim() : "";
+        /*验证码*/
+        String code = this.postData.has("code") ? this.postData.getString("code").trim() : "";
+        if (tel != null && !tel.equals("")) {
+            User user = new User();
+            user.setPhoneNum(tel);
+            user.setPassword(passwd);
+            user.setEmail(email);
+            user.setUserName(userName);
+
+            Jedis redis = redisUtil.getJedis();
+            if (redis.exists(tel + "code") && redis.get(tel + "code").equals(code)) {
+                int status = userDao.addUser(user);
+                if (status == 1) {
+                    this.responseData.put("status", SUCCESS);
+                    this.responseData.put("message", "Add user successfully");
+                } else {
+                    this.responseData.put("status", UNKNOWN_ERROR);
+                    this.responseData.put("message", "Failed to add user");
+                }
+            } else {
+                this.responseData.put("status", INVALID_VERIFICATION_CODE);
+                this.responseData.put("message", "Verification Code is wrong");
+            }
+
+        } else {
+            this.responseData.put("status", INVALID_PHONE_NUMBER);
+            this.responseData.put("message", "Phone number can not be empty");
+        }
+    }
+
+    /*申请注册用的验证码*/
+    public void fetchCodeForRegister() {
+        String tel = this.postData.has("appid") ? this.postData.getString("appid").trim() : null;
+        String code = RandomStringUtils.random(6, "1234567890");
+
+        HashMap<String, String> headers = new HashMap<String, String>();
+        headers.put("Accept", "application/json;charset=utf-8");
+        headers.put("Content-Type", "application/x-www-form-urlencoded;charset=utf-8");
+
+        JSONObject params = new JSONObject();
+        String text = "【刘炎】 你的验证码是 " + code;
+        params.put("apikey", apiKey);
+        params.put("text", text);
+        params.put("mobile", tel);
+
+        if (tel != null) {
+            String url = "https://sms.yunpian.com/v2/sms/single_send.json";
+            JSONObject res = HttpsUtil.post(url, params, headers, "application/x-www-form-urlencoded");
+            if (res.getInt("status") != -1) {
+                JSONObject response = res.getJSONObject("response");
+                /*如果发送成功，则记录该验证码*/
+                if (response.getInt("code") == 0) {
+                    Jedis redis = redisUtil.getJedis();
+                    redis.setex(tel + "code", verificationCodeTimeout, code);
+                    redisUtil.returnResource(redis);
+                    this.responseData.put("status", SUCCESS);
+                } else {
+                    this.responseData.put("status", SEND_MESSAGE_FAILED);
+                }
+                this.responseData.put("message", response.getString("msg"));
+            } else {
+                this.responseData.put("status", SHORT_MESSAGE_GATEWAY_UNREACHABLE);
+                this.responseData.put("error", "Internal Error");
+                logger.error("Can not reache short message gateway");
+            }
+        } else {
+            this.responseData.put("status", INVALID_PHONE_NUMBER);
+            this.responseData.put("error", "Phone number can not be empty");
+        }
+    }
 
     public void changePassword() {
         Jedis jedis = redisUtil.getJedis();
